--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.0"
   },
-  "homepage": "http://m-anstasia.github.io/weather-forecast"
+  "homepage": "http://m-anstasia.github.io"
 }
